--- a/index.html
+++ b/index.html
@@ -4,7 +4,44 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Insert title here</title>
 </head>
-<body>Test
+<body>
+	<h1 align="center">Homepage von Andreas</h1>
+	<div>
+		<table align="center">
+			<tbody>
+				<tr>
+					<td width="50%"><strong>Name:</strong></td>
+					<td width="50%">Andreas</td>
+				</tr>
+				<tr>
+					<td width="50%"><strong>Nachame:</strong></td>
+					<td width="50%">Denninger</td>
+				</tr>
+				<tr>
+					<td width="50%"><strong>Straße:</strong></td>
+					<td width="50%">Elsässer Str.</td>
+				</tr>
+				<tr>
+					<td width="50%"><strong>Hausnummer:</strong></td>
+					<td width="50%">17</td>
+				</tr>
+				<tr>
+					<td width="50%"><strong>Wohnort:</strong></td>
+					<td width="50%">Nürnberg</td>
+				</tr>
+				<tr>
+					<td width="50%"><strong>Postleitzahl:</strong></td>
+					<td width="50%">90433</td>
+				</tr>
+				<tr>
+					<td width="50%"><strong>Email:</strong></td>
+					<td width="50%">dingel@web.de</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+	<p><div align="center">Bitte keinen Spam, die Daten sind gefakt.</div>
+	</p>
 </body>
 </html>
 
