--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
+  <head>
+    <title>Homepage von Andreas</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+  </head>
+  <body>
 	<h1 align="center">Homepage von Andreas</h1>
 	<div>
 		<table align="center">
@@ -18,8 +20,8 @@
 					<td width="50%">Denninger</td>
 				</tr>
 				<tr>
-					<td width="50%"><strong>StraÃŸe:</strong></td>
-					<td width="50%">ElsÃ¤sser Str.</td>
+					<td width="50%"><strong>Straße:</strong></td>
+					<td width="50%">Elsässer Str.</td>
 				</tr>
 				<tr>
 					<td width="50%"><strong>Hausnummer:</strong></td>
@@ -27,7 +29,7 @@
 				</tr>
 				<tr>
 					<td width="50%"><strong>Wohnort:</strong></td>
-					<td width="50%">NÃ¼rnberg</td>
+					<td width="50%">Nürnberg</td>
 				</tr>
 				<tr>
 					<td width="50%"><strong>Postleitzahl:</strong></td>
@@ -42,6 +44,9 @@
 	</div>
 	<p><div align="center">Bitte keinen Spam, die Daten sind gefakt.</div>
 	</p>
-</body>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="//code.jquery.com/jquery.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+  </body>
 </html>
-
