changed for validation one

--- a/index.html
+++ b/index.html
@@ -7,42 +7,42 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
   </head>
   <body>
-	<h1 align="center">Homepage von Andreas</h1>
+	<h1 class="text-center">Homepage von Andreas</h1>
 	<div>
-		<table align="center">
+		<table class="table table-striped">
 			<tbody>
 				<tr>
-					<td width="50%"><strong>Name:</strong></td>
-					<td width="50%">Andreas</td>
+					<td><strong>Name:</strong></td>
+					<td>Andreas</td>
 				</tr>
 				<tr>
-					<td width="50%"><strong>Nachame:</strong></td>
-					<td width="50%">Denninger</td>
+					<td><strong>Nachame:</strong></td>
+					<td>Denninger</td>
 				</tr>
 				<tr>
-					<td width="50%"><strong>Straße:</strong></td>
-					<td width="50%">Elsässer Str.</td>
+					<td><strong>Straße:</strong></td>
+					<td>Elsässer Str.</td>
 				</tr>
 				<tr>
-					<td width="50%"><strong>Hausnummer:</strong></td>
-					<td width="50%">17</td>
+					<td><strong>Hausnummer:</strong></td>
+					<td>17</td>
 				</tr>
 				<tr>
-					<td width="50%"><strong>Wohnort:</strong></td>
-					<td width="50%">Nürnberg</td>
+					<td><strong>Wohnort:</strong></td>
+					<td>Nürnberg</td>
 				</tr>
 				<tr>
-					<td width="50%"><strong>Postleitzahl:</strong></td>
-					<td width="50%">90433</td>
+					<td><strong>Postleitzahl:</strong></td>
+					<td>90433</td>
 				</tr>
 				<tr>
-					<td width="50%"><strong>Email:</strong></td>
-					<td width="50%">dingel@web.de</td>
+					<td><strong>Email:</strong></td>
+					<td>dingel@web.de</td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
-	<p><div align="center">Bitte keinen Spam, die Daten sind gefakt.</div>
+	<p><div class="text-center">Bitte keinen Spam, die Daten sind gefakt.</div>
 	</p>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="//code.jquery.com/jquery.js"></script>
