--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Homepage von Andreas</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
   </head>
@@ -20,8 +20,8 @@
 					<td>Denninger</td>
 				</tr>
 				<tr>
-					<td><strong>Straße:</strong></td>
-					<td>Elsässer Str.</td>
+					<td><strong>StraÃŸe:</strong></td>
+					<td>ElsÃ¤sser Str.</td>
 				</tr>
 				<tr>
 					<td><strong>Hausnummer:</strong></td>
@@ -29,7 +29,7 @@
 				</tr>
 				<tr>
 					<td><strong>Wohnort:</strong></td>
-					<td>Nürnberg</td>
+					<td>NÃ¼rnberg</td>
 				</tr>
 				<tr>
 					<td><strong>Postleitzahl:</strong></td>
@@ -42,8 +42,7 @@
 			</tbody>
 		</table>
 	</div>
-	<p><div class="text-center">Bitte keinen Spam, die Daten sind gefakt.</div>
-	</p>
+	<div class="text-center">Bitte keinen Spam, die Daten sind gefakt.</div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="//code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
