added simple menu

--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Homepage von Andreas</title>
-   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-  </head>
-  <body>
+<head>
+<title>Homepage von Andreas</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<!-- Bootstrap -->
+<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+</head>
+<body>
 	<h1 class="text-center">Homepage von Andreas</h1>
+	<nav>
+		<ul class="nav nav-pills nav-stacked span2">
+			<li><a href="#">Home</a></li>
+			<li><a href="#">Lebenslauf</a></li>
+			<li><a href="#">Know-How</a></li>
+			<li><a href="#">berufliche Projekte</a></li>
+			<li><a href="#">private Projekte</a></li>
+			<li><a href="#">Impressum</a></li>
+		</ul>
+	</nav>
+
 	<div>
 		<table class="table table-striped">
 			<tbody>
@@ -42,10 +53,11 @@
 			</tbody>
 		</table>
 	</div>
-	<div class="text-center">Bitte keinen Spam, die Daten sind gefakt.</div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="//code.jquery.com/jquery.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-  </body>
+	<div class="text-center">Bitte keinen Spam, die Daten sind
+		gefakt.</div>
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script src="//code.jquery.com/jquery.js"></script>
+	<!-- Include all compiled plugins (below), or include individual files as needed -->
+	<script src="js/bootstrap.min.js"></script>
+</body>
 </html>
