--- a/index.html
+++ b/index.html
@@ -4,57 +4,86 @@
 <title>Homepage von Andreas</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <!-- Bootstrap -->
-<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="screen">
 </head>
 <body>
-	<h1 class="text-center">Homepage von Andreas</h1>
-	<nav>
-		<ul class="nav nav-pills nav-stacked span2">
-			<li><a href="#">Home</a></li>
-			<li><a href="#">Lebenslauf</a></li>
-			<li><a href="#">Know-How</a></li>
-			<li><a href="#">berufliche Projekte</a></li>
-			<li><a href="#">private Projekte</a></li>
-			<li><a href="#">Impressum</a></li>
-		</ul>
-	</nav>
-
-	<div>
-		<table class="table table-striped">
-			<tbody>
-				<tr>
-					<td><strong>Name:</strong></td>
-					<td>Andreas</td>
-				</tr>
-				<tr>
-					<td><strong>Nachame:</strong></td>
-					<td>Denninger</td>
-				</tr>
-				<tr>
-					<td><strong>Straße:</strong></td>
-					<td>Elsässer Str.</td>
-				</tr>
-				<tr>
-					<td><strong>Hausnummer:</strong></td>
-					<td>17</td>
-				</tr>
-				<tr>
-					<td><strong>Wohnort:</strong></td>
-					<td>Nürnberg</td>
-				</tr>
-				<tr>
-					<td><strong>Postleitzahl:</strong></td>
-					<td>90433</td>
-				</tr>
-				<tr>
-					<td><strong>Email:</strong></td>
-					<td>dingel@web.de</td>
-				</tr>
-			</tbody>
-		</table>
+<div class="container">
+	<div class="row">
+		<div class="span12">Header</div>
 	</div>
-	<div class="text-center">Bitte keinen Spam, die Daten sind
-		gefakt.</div>
+ 	<div class="row">
+		<div class="col-md-2">
+			<ul class="nav nav">
+				<li class="active"><a href="#">Home</a></li>
+				 <li class="nav-header">List header</li>
+				 <li><a href="#">Lebenslauf</a></li>
+				<li><a href="#">Know-How</a></li>
+				<li><a href="#">berufliche Projekte</a></li>
+				 <li class="nav-header">List header</li>
+				 <li><a href="#">private Projekte</a></li>
+				<li><a href="#">Impressum</a></li>
+				 <li class="nav-header"><strong>Web-Engineering I: Grundlagen der Web-Entwicklung</strong></li>
+				 <li><a href="hausaufgabe.html">Hausaufgabe: Mit CSS formatierte Tabelle aller "XHTML 1.0 strict"-Elemente</a></li>
+			</ul>
+		</div>
+		<div class="col-md-4">
+			<div class="row">
+				<div class="col-lg-6">
+				<h3>Content</h3>
+					Lorem ipsum  dolor  sit  amet,  consetetur  sadipscing  elitr,  sed  diam  nonumy  eirmod  tempor  invidunt  ut  labore  et  dolore  magna  aliquyam  erat,  sed  diam  voluptua.  At  vero  eos  et  accusam  et  justo  duo  dolores  et  ea  rebum.  Stet  clita  kasd  gubergren,  no  sea  takimata  sanctus  est  Lorem  ipsum  dolor  sit  amet.  Lorem  ipsum  dolor  sit  amet,  consetetur  sadipscing  elitr,  sed  diam  nonumy  eirmod  tempor  invidunt  ut  labore  et  dolore  magna  aliquyam  erat,  sed  diam  voluptua.  At  vero  eos  et  accusam  et  justo  duo  dolores  et  ea  rebum.  Stet  clita  kasd  gubergren,  no  sea  takimata  sanctus  est  Lorem  ipsum  dolor  sit  amet.  Lorem  ipsum  dolor  sit  amet,  consetetur  sadipscing  elitr,  sed  diam  nonumy  eirmod  tempor  invidunt  ut  labore  et  dolore  magna  aliquyam  erat,  sed  diam  voluptua.  At  vero  eos  et  accusam  et  justo  duo  dolores  et  ea  rebum.  Stet  clita  kasd  gubergren,  no  sea  takimata  sanctus  est  Lorem  ipsum  dolor  sit  amet.
+				</div>
+			</div>
+		</div>
+		<div class="col-md-2 pull-right">Sidebar</div>
+	</div>
+	<div class="row">
+		<div class="col-md-4">Footer</div>
+	</div>
+</div>
+<!-- 	 <div class="span10"> -->
+<!-- 	<div class="col-md-9"> -->
+<!-- 		<div class="page-header"> -->
+<!--       <h1 class="text-center">Homepage von Andreas</h1>F -->
+<!--     </div> -->
+	
+<!-- 	<table class="table table-striped"> -->
+<!-- 			<tbody> -->
+<!-- 				<tr> -->
+<!-- 					<td><strong>Name:</strong></td> -->
+<!-- 					<td>Andreas</td> -->
+<!-- 				</tr> -->
+<!-- 				<tr> -->
+<!-- 					<td><strong>Nachame:</strong></td> -->
+<!-- 					<td>Denninger</td> -->
+<!-- 				</tr> -->
+<!-- 				<tr> -->
+<!-- 					<td><strong>Straße:</strong></td> -->
+<!-- 					<td>Elsässer Str.</td> -->
+<!-- 				</tr> -->
+<!-- 				<tr> -->
+<!-- 					<td><strong>Hausnummer:</strong></td> -->
+<!-- 					<td>17</td> -->
+<!-- 				</tr> -->
+<!-- 				<tr> -->
+<!-- 					<td><strong>Wohnort:</strong></td> -->
+<!-- 					<td>Nürnberg</td> -->
+<!-- 				</tr> -->
+<!-- 				<tr> -->
+<!-- 					<td><strong>Postleitzahl:</strong></td> -->
+<!-- 					<td>90433</td> -->
+<!-- 				</tr> -->
+<!-- 				<tr> -->
+<!-- 					<td><strong>Email:</strong></td> -->
+<!-- 					<td>dingel@web.de</td> -->
+<!-- 				</tr> -->
+<!-- 			</tbody> -->
+<!-- 		</table> -->
+<!-- 	</div> -->
+<!-- 	<div class="text-center">Bitte keinen Spam, die Daten sind -->
+<!-- 		gefakt.</div> -->
+<!-- 		</div> -->
+<!-- 		</div> -->
+<!-- 		</div> -->
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="//code.jquery.com/jquery.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
