--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<tbody>
 			<tr>
 				<td><a href=""><img
-						src="http://validator.w3.org/check?uri=http%3A%2F%2Fandreasdenninger.cloudcontrolled.com%2F
+						src="http://validator.w3.org/check?uri=http%3A%2F%2Fandreasdenninger.cloudcontrolled.com%2F"
 						alt="enter image description here" /></a></td>
 				<td><a href=""><img
 						src="http://www.w3.org/Icons/valid-css2-blue"
