--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 	<table>
 		<tbody>
 			<tr>
-				<td><a href=""><img
-						src="http://validator.w3.org/check?uri=http%3A%2F%2Fandreasdenninger.cloudcontrolled.com%2F"
-						alt="enter image description here" /></a></td>
-				<td><a href=""><img
+				<td><a href="http://validator.w3.org/check?uri=http%3A%2F%2Fandreasdenninger.cloudcontrolled.com%2F"><img
+						src="http://www.w3.org/Icons/valid-xhtml10"
+						alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a></td>
+				<td><a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fandreasdenninger.cloudcontrolled.com%2F"><img
 						src="http://www.w3.org/Icons/valid-css2-blue"
 						alt="enter image description here" /></a></td>
 			</tr>
@@ -88,7 +88,8 @@
 			</tr>
 			<tr>
 				<td class="tag">&lt;big&gt;&lt;/big&gt;</td>
-				<td class="description">Markiert Text, der größer dargestellt werden soll als normal</td>
+				<td class="description">Markiert Text, der größer dargestellt
+					werden soll als normal</td>
 				<td class="inline-true">Inline</td>
 				<td class="semantic-true">true</td>
 			</tr>
@@ -518,7 +519,8 @@
 			</tr>
 			<tr>
 				<td class="tag">&lt;tt&gt;&lt;/tt&gt;</td>
-				<td class="description">Markiert einen Text, der im Schreibmaschinenstil dargestellt wird</td>
+				<td class="description">Markiert einen Text, der im
+					Schreibmaschinenstil dargestellt wird</td>
 				<td class="inline-true">Inline</td>
 				<td class="semantic-false">false</td>
 			</tr>
