--- a/suche.html
+++ b/suche.html
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="de">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 <title>Hausaufgabe: Barrierefreies Suchformular</title>
@@ -10,7 +10,8 @@
 <h1>Hausaufgabe: Barrierefreies Suchformular</h1>
 <form action="http://de.wikipedia.org/wiki/Spezial:Suche">
    <fieldset>
-      <legend>Suchen</legend>
+      <legend>Barrierefreies Suchformular</legend>
+      <label for="search">Suchtext</label>
       <input type="text"   name="search" value="" />
       <input type="submit" name="go" value="Artikel"/>
       <input type="submit" name="fulltext" value="Volltext" />
