--- a/suche.html
+++ b/suche.html
@@ -11,11 +11,12 @@
 <form action="http://de.wikipedia.org/wiki/Spezial:Suche">
    <fieldset>
       <legend>Barrierefreies Suchformular</legend>
-      <label for="search">Suchtext</label>
-      <input type="text"   name="search" value="" />
+      <label for="search">Suchtext: </label>
+      <input type="text"   name="search" id="search" value="" />
       <input type="submit" name="go" value="Artikel"/>
       <input type="submit" name="fulltext" value="Volltext" />
    </fieldset>
 </form>
+<a href="http://andreasdenninger.cloudcontrolled.com/suche.html"><img src="http://www.w3.org/WAI/wcag2AAA.gif" /alt=""WAI-AAA></a>
 </body>
 </html>
