--- a/suche.html
+++ b/suche.html
@@ -4,6 +4,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 <title>Hausaufgabe: Barrierefreies Suchformular</title>
+<link href="css/suche.css" rel="stylesheet" type="text/css"
+	media="screen" />
 </head>
 <body>
 
