--- a/suche.html
+++ b/suche.html
@@ -19,6 +19,6 @@
       <input type="submit" name="fulltext" value="Volltext" />
    </fieldset>
 </form>
-<a href="http://andreasdenninger.cloudcontrolled.com/suche.html"><img src="http://www.w3.org/WAI/wcag2AAA.gif" /alt=""WAI-AAA></a>
+<a href="http://wave.webaim.org/report#/http://andreasdenninger.cloudcontrolled.com/suche.html"><img src="http://www.w3.org/WAI/wcag2AAA.gif" alt="WAI-AAA"></a>
 </body>
 </html>
