--- a/suche.html
+++ b/suche.html
@@ -13,7 +13,7 @@
 <form action="http://de.wikipedia.org/wiki/Spezial:Suche">
    <fieldset>
       <legend>Barrierefreies Suchformular</legend>
-      <label for="search">Suchtext: </label>
+      <label for="search">Suche in Wikipedia:</label><br />
       <input type="text"   name="search" id="search" value="" />
       <input type="submit" name="go" value="Artikel"/>
       <input type="submit" name="fulltext" value="Volltext" />
