implemented basic layout for finish task

--- a/index.html
+++ b/index.html
@@ -4,86 +4,59 @@
 <title>Homepage von Andreas</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <!-- Bootstrap -->
-<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="screen">
+<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"
+	media="screen">
+	<link href="css/justified-nav.css" rel="stylesheet">
 </head>
 <body>
-<div class="container">
-	<div class="row">
-		<div class="span12">Header</div>
-	</div>
- 	<div class="row">
-		<div class="col-md-2">
-			<ul class="nav nav">
-				<li class="active"><a href="#">Home</a></li>
-				 <li class="nav-header">List header</li>
-				 <li><a href="#">Lebenslauf</a></li>
-				<li><a href="#">Know-How</a></li>
-				<li><a href="#">berufliche Projekte</a></li>
-				 <li class="nav-header">List header</li>
-				 <li><a href="#">private Projekte</a></li>
-				<li><a href="#">Impressum</a></li>
-				 <li class="nav-header"><strong>Web-Engineering I: Grundlagen der Web-Entwicklung</strong></li>
-				 <li><a href="hausaufgabe.html">Hausaufgabe: Mit CSS formatierte Tabelle aller "XHTML 1.0 strict"-Elemente</a></li>
+	<div class="container">
+		<div class="masthead">
+			<h3 class="text-muted">Abschlussarbeit für den MOOC Webengineering I</h3>
+			<ul class="nav nav-justified">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="tabelle.html">Tabelle aller "XHTML 1.0 strict"-Elemente</a></li>
+				<li><a href="suche.html">Barrierefreies Suchformular</a></li>
+				<li><a href="impressum.html">Impressum</a></li>
 			</ul>
 		</div>
-		<div class="col-md-4">
-			<div class="row">
-				<div class="col-lg-6">
-				<h3>Content</h3>
-					Lorem ipsum  dolor  sit  amet,  consetetur  sadipscing  elitr,  sed  diam  nonumy  eirmod  tempor  invidunt  ut  labore  et  dolore  magna  aliquyam  erat,  sed  diam  voluptua.  At  vero  eos  et  accusam  et  justo  duo  dolores  et  ea  rebum.  Stet  clita  kasd  gubergren,  no  sea  takimata  sanctus  est  Lorem  ipsum  dolor  sit  amet.  Lorem  ipsum  dolor  sit  amet,  consetetur  sadipscing  elitr,  sed  diam  nonumy  eirmod  tempor  invidunt  ut  labore  et  dolore  magna  aliquyam  erat,  sed  diam  voluptua.  At  vero  eos  et  accusam  et  justo  duo  dolores  et  ea  rebum.  Stet  clita  kasd  gubergren,  no  sea  takimata  sanctus  est  Lorem  ipsum  dolor  sit  amet.  Lorem  ipsum  dolor  sit  amet,  consetetur  sadipscing  elitr,  sed  diam  nonumy  eirmod  tempor  invidunt  ut  labore  et  dolore  magna  aliquyam  erat,  sed  diam  voluptua.  At  vero  eos  et  accusam  et  justo  duo  dolores  et  ea  rebum.  Stet  clita  kasd  gubergren,  no  sea  takimata  sanctus  est  Lorem  ipsum  dolor  sit  amet.
-				</div>
-			</div>
-		</div>
-		<div class="col-md-2 pull-right">Sidebar</div>
-	</div>
-	<div class="row">
-		<div class="col-md-4">Footer</div>
-	</div>
-</div>
-<!-- 	 <div class="span10"> -->
-<!-- 	<div class="col-md-9"> -->
-<!-- 		<div class="page-header"> -->
-<!--       <h1 class="text-center">Homepage von Andreas</h1>F -->
-<!--     </div> -->
-	
-<!-- 	<table class="table table-striped"> -->
-<!-- 			<tbody> -->
-<!-- 				<tr> -->
-<!-- 					<td><strong>Name:</strong></td> -->
-<!-- 					<td>Andreas</td> -->
-<!-- 				</tr> -->
-<!-- 				<tr> -->
-<!-- 					<td><strong>Nachame:</strong></td> -->
-<!-- 					<td>Denninger</td> -->
-<!-- 				</tr> -->
-<!-- 				<tr> -->
-<!-- 					<td><strong>Straße:</strong></td> -->
-<!-- 					<td>Elsässer Str.</td> -->
-<!-- 				</tr> -->
-<!-- 				<tr> -->
-<!-- 					<td><strong>Hausnummer:</strong></td> -->
-<!-- 					<td>17</td> -->
-<!-- 				</tr> -->
-<!-- 				<tr> -->
-<!-- 					<td><strong>Wohnort:</strong></td> -->
-<!-- 					<td>Nürnberg</td> -->
-<!-- 				</tr> -->
-<!-- 				<tr> -->
-<!-- 					<td><strong>Postleitzahl:</strong></td> -->
-<!-- 					<td>90433</td> -->
-<!-- 				</tr> -->
-<!-- 				<tr> -->
-<!-- 					<td><strong>Email:</strong></td> -->
-<!-- 					<td>dingel@web.de</td> -->
-<!-- 				</tr> -->
-<!-- 			</tbody> -->
-<!-- 		</table> -->
-<!-- 	</div> -->
-<!-- 	<div class="text-center">Bitte keinen Spam, die Daten sind -->
-<!-- 		gefakt.</div> -->
-<!-- 		</div> -->
-<!-- 		</div> -->
-<!-- 		</div> -->
+
+       <div class="jumbotron">
+        <h1>Website der Abschlussarbeit für den MOOC Webengineering I</h1>
+        <p class="lead">Auf dieser Website finden Sie die Inhalte für die Abschlussarbeit für den MOOC "Webengineering I". Hierfür habe ich drei Blogeinträge verfasst. Einerseits die beiden Hausaufgaben, Suchformular für Wikipedia und Tabelle, andererseits habe ich den Artikel 'Barrierefreies Web' nochmals verlinkt. </p>
+      </div>
+
+      <!-- Example row of columns -->
+      <div class="row">
+        <div class="col-lg-4">
+          <h2>Mit CSS formatierte Tabelle aller "XHTML 1.0 strict"-Elemente</h2>
+          <p class="text-danger">Safari exhibits a bug in which resizing your browser horizontally causes rendering errors in the justified nav that are cleared upon refreshing.</p>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn btn-primary" href="#" role="button">mehr &raquo;</a></p>
+        </div>
+        <div class="col-lg-4">
+          <h2>Barrierefreies Suchformular</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn btn-primary" href="#" role="button">mehr &raquo;</a></p>
+       </div>
+        <div class="col-lg-4">
+          <h2>Reine Formsache: Barrierefreie Formulare mit HTML, CSS & JavaScript</h2>
+          <p>Eintippen, Knopf drücken, fertig: Diskussionen in Foren und Kommentare in Blogs, soziale Interaktion in Communities, das Hochladen eigener Inhalte in Videoportalen, Jobangebote und -gesuche in Stellenbörsen, Fahrplanauskünfte und Tickets bei der Bahn oder Bestellungen und Bezahlung in Online-Shops, ja sogar das Einstellen von Inhalten in Redaktionssystemen und Weblogs – all das funktioniert nur mit Formularen. In Zeiten des Mitmach-Webs werden Formulare immer wichtiger. Formulare sind die technische Basis interaktiver Angebote und die Grundlage der Kommunikation zwischen Anbietern und Nutzern einer Webseite.</p>
+          <p><a class="btn btn-primary" href="http://www.einfach-fuer-alle.de/blog/id/2738/" target="_blank" role="button">mehr &raquo;</a></p>
+        </div>
+      </div>
+
+      <!-- Site footer -->
+      <div class="footer">
+        <p>&copy; Andreas Denninger, 2013 / 2014</p>
+      </div>
+
+    </div> <!-- /container -->
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="//code.jquery.com/jquery.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
