--- a/suche.html
+++ b/suche.html
@@ -6,8 +6,21 @@
 <title>Hausaufgabe: Barrierefreies Suchformular</title>
 <link href="css/suche.css" rel="stylesheet" type="text/css"
 	media="screen" />
+<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"
+	media="screen">
+<link href="css/justified-nav.css" rel="stylesheet">
 </head>
 <body>
+	<div class="container">
+		<div class="masthead">
+			<h3 class="text-muted">Abschlussarbeit für den MOOC Webengineering I</h3>
+			<ul class="nav nav-justified">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="tabelle.html">Tabelle aller "XHTML 1.0 strict"-Elemente</a></li>
+				<li><a href="suche.html">Barrierefreies Suchformular</a></li>
+				<li><a href="impressum.html">Impressum</a></li>
+			</ul>
+		</div>
 
 <h1>Hausaufgabe: Barrierefreies Suchformular</h1>
 <form action="http://de.wikipedia.org/wiki/Spezial:Suche">
@@ -22,5 +35,8 @@
 <br />
 <br />
 <a href="http://wave.webaim.org/report#/http://andreasdenninger.cloudcontrolled.com/suche.html"><img src="http://www.w3.org/WAI/wcag2AAA.gif" alt="WAI-AAA"></a>
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script src="//code.jquery.com/jquery.js"></script>
+	<!-- Include all compiled plugins (below), or include individual files as needed -->
 </body>
 </html>
