--- a/tabelle.html
+++ b/tabelle.html
@@ -5,10 +5,24 @@
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 <link href="css/xhtml.css" rel="stylesheet" type="text/css"
 	media="screen" />
+<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"
+	media="screen">
+<link href="css/justified-nav.css" rel="stylesheet">
 <title>Hausaufgabe: Mit CSS formatierte Tabelle aller "XHTML 1.0
 	strict"-Elemente</title>
+	
 </head>
 <body>
+	<div class="container">
+		<div class="masthead">
+			<h3 class="text-muted">Abschlussarbeit für den MOOC Webengineering I</h3>
+			<ul class="nav nav-justified">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="tabelle.html">Tabelle aller "XHTML 1.0 strict"-Elemente</a></li>
+				<li><a href="suche.html">Barrierefreies Suchformular</a></li>
+				<li><a href="impressum.html">Impressum</a></li>
+			</ul>
+		</div>
 	<h1>Hausaufgabe: Mit CSS formatierte Tabelle aller "XHTML 1.0
 		strict"-Elemente</h1>
 	<table>
@@ -539,5 +553,9 @@
 			</tr>
 		</tbody>
 	</table>
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script src="//code.jquery.com/jquery.js"></script>
+	<!-- Include all compiled plugins (below), or include individual files as needed -->
+	<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
