fixed some layout bugs

--- a/impressum.html
+++ b/impressum.html
@@ -5,8 +5,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <!-- Bootstrap -->
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"
-	media="screen">
-<link href="css/justified-nav.css" rel="stylesheet">
+	media="screen" />
+<link href="css/justified-nav.css" rel="stylesheet" />
 </head>
 <body>
 	<div class="container">
@@ -14,7 +14,7 @@
 			<h3 class="text-muted">Abschlussarbeit für den MOOC Webengineering I</h3>
 			<ul class="nav nav-justified">
 				<li><a href="index.html">Home</a></li>
-				<li><a href="tabelle.html">Tabelle aller "XHTML 1.0 strict"-Elemente</a></li>
+				<li><a href="tabelle.html">Tabelle "XHTML 1.0 strict"</a></li>
 				<li><a href="suche.html">Barrierefreies Suchformular</a></li>
 				<li><a href="impressum.html">Impressum</a></li>
 			</ul>
