--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <!-- Bootstrap -->
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"
-	media="screen">
-	<link href="css/justified-nav.css" rel="stylesheet">
+	media="screen" />
+	<link href="css/justified-nav.css" rel="stylesheet" />
 </head>
 <body>
 	<div class="container">
@@ -14,7 +14,7 @@
 			<h3 class="text-muted">Abschlussarbeit für den MOOC Webengineering I</h3>
 			<ul class="nav nav-justified">
 				<li><a href="index.html">Home</a></li>
-				<li><a href="tabelle.html">Tabelle aller "XHTML 1.0 strict"-Elemente</a></li>
+				<li><a href="tabelle.html">Tabelle "XHTML 1.0 strict"</a></li>
 				<li><a href="suche.html">Barrierefreies Suchformular</a></li>
 				<li><a href="impressum.html">Impressum</a></li>
 			</ul>
@@ -22,21 +22,21 @@
 
        <div class="jumbotron">
         <h1>Website der Abschlussarbeit für den MOOC Webengineering I</h1>
-        <p class="lead">Auf dieser Website finden Sie die Inhalte für die Abschlussarbeit für den MOOC "Webengineering I". Hierfür habe ich drei Blogeinträge verfasst. Einerseits die beiden Hausaufgaben, Suchformular für Wikipedia und Tabelle, andererseits habe ich den Artikel 'Barrierefreies Web' nochmals verlinkt. </p>
+        <p class="lead">Auf dieser Website finden Sie ie geforderten Inhalte für die Abschlussarbeit des MOOCs 'Webengineering I'.</p> 
+        <p>Hierfür habe ich drei Blogeinträge verfasst. Die beiden Hausaufgaben 'Barrierefreies Suchformular' für Wikipedia und 'Mit CSS formatierte Tabelle aller "XHTML 1.0 strict"-Elemente', sowie eine Verlinkung des Artikels 'Reine Formsache: Barrierefreie Formulare mit HTML, CSS & JavaScript'. </p>
       </div>
 
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-lg-4">
           <h2>Mit CSS formatierte Tabelle aller "XHTML 1.0 strict"-Elemente</h2>
-          <p class="text-danger">Safari exhibits a bug in which resizing your browser horizontally causes rendering errors in the justified nav that are cleared upon refreshing.</p>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-primary" href="#" role="button">mehr &raquo;</a></p>
+          <p>Während HTML eine relativ neue Erfindung ist, existiert das zugrunde liegende Konzept der Auszeichnungssprachen schon viel länger. HTML ist lediglich eine Auszeichnungssprache unter vielen, allerdings die bislang weltweit erfolgreichste und bekannteste. Ein Merkmal des Konzepts solcher Auszeichnungssprachen ist, dass ihre Bestandteile nicht einfach "frei erfunden" sind, sondern dass es Meta-Sprachen gibt, mit deren Hilfe die Regeln und Bestandteile solcher Auszeichnungssprachen definiert werden.</p>
+          <p><a class="btn btn-primary" href="tabelle.html" role="button">mehr &raquo;</a></p>
         </div>
         <div class="col-lg-4">
           <h2>Barrierefreies Suchformular</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-primary" href="#" role="button">mehr &raquo;</a></p>
+          <p>Der folgende HTML-Quelltext bindet eine Wikipedia-Suche in die entsprechende Stelle der Webseite ein. </p>
+          <p><a class="btn btn-primary" href="suche.html" role="button">mehr &raquo;</a></p>
        </div>
         <div class="col-lg-4">
           <h2>Reine Formsache: Barrierefreie Formulare mit HTML, CSS & JavaScript</h2>
