--- a/suche.html
+++ b/suche.html
@@ -7,8 +7,8 @@
 <link href="css/suche.css" rel="stylesheet" type="text/css"
 	media="screen" />
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"
-	media="screen">
-<link href="css/justified-nav.css" rel="stylesheet">
+	media="screen" />
+<link href="css/justified-nav.css" rel="stylesheet" />
 </head>
 <body>
 	<div class="container">
@@ -16,7 +16,7 @@
 			<h3 class="text-muted">Abschlussarbeit für den MOOC Webengineering I</h3>
 			<ul class="nav nav-justified">
 				<li><a href="index.html">Home</a></li>
-				<li><a href="tabelle.html">Tabelle aller "XHTML 1.0 strict"-Elemente</a></li>
+				<li><a href="tabelle.html">Tabelle "XHTML 1.0 strict"</a></li>
 				<li><a href="suche.html">Barrierefreies Suchformular</a></li>
 				<li><a href="impressum.html">Impressum</a></li>
 			</ul>
@@ -35,6 +35,13 @@
 <br />
 <br />
 <a href="http://wave.webaim.org/report#/http://andreasdenninger.cloudcontrolled.com/suche.html"><img src="http://www.w3.org/WAI/wcag2AAA.gif" alt="WAI-AAA"></a>
+      <!-- Site footer -->
+      <div class="footer">
+        <p>&copy; Andreas Denninger, 2013 / 2014</p>
+      </div>
+
+    </div> <!-- /container -->
+
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="//code.jquery.com/jquery.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
