--- a/tabelle.html
+++ b/tabelle.html
@@ -6,8 +6,8 @@
 <link href="css/xhtml.css" rel="stylesheet" type="text/css"
 	media="screen" />
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"
-	media="screen">
-<link href="css/justified-nav.css" rel="stylesheet">
+	media="screen" />
+<link href="css/justified-nav.css" rel="stylesheet" />
 <title>Hausaufgabe: Mit CSS formatierte Tabelle aller "XHTML 1.0
 	strict"-Elemente</title>
 	
@@ -18,7 +18,7 @@
 			<h3 class="text-muted">Abschlussarbeit für den MOOC Webengineering I</h3>
 			<ul class="nav nav-justified">
 				<li><a href="index.html">Home</a></li>
-				<li><a href="tabelle.html">Tabelle aller "XHTML 1.0 strict"-Elemente</a></li>
+				<li><a href="tabelle.html">Tabelle "XHTML 1.0 strict"</a></li>
 				<li><a href="suche.html">Barrierefreies Suchformular</a></li>
 				<li><a href="impressum.html">Impressum</a></li>
 			</ul>
@@ -553,6 +553,13 @@
 			</tr>
 		</tbody>
 	</table>
+	      <!-- Site footer -->
+      <div class="footer">
+        <p>&copy; Andreas Denninger, 2013 / 2014</p>
+      </div>
+
+    </div> <!-- /container -->
+	
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="//code.jquery.com/jquery.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
