fixed problems with validation w3c

--- a/impressum.html
+++ b/impressum.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Homepage von Andreas</title>
+<title>Homepage von Andreas Denninger</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <!-- Bootstrap -->
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"
