--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Homepage von Andreas</title>
+<title>Homepage von Andreas Denninger</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <!-- Bootstrap -->
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"
@@ -22,7 +22,7 @@
 
        <div class="jumbotron">
         <h1>Website der Abschlussarbeit für den MOOC Webengineering I</h1>
-        <p class="lead">Auf dieser Website finden Sie ie geforderten Inhalte für die Abschlussarbeit des MOOCs 'Webengineering I'.</p> 
+        <p class="lead">Auf dieser Website finden Sie die geforderten Inhalte für die Abschlussarbeit des MOOCs 'Webengineering I'.</p> 
         <p>Hierfür habe ich drei Blogeinträge verfasst. Die beiden Hausaufgaben 'Barrierefreies Suchformular' für Wikipedia und 'Mit CSS formatierte Tabelle aller "XHTML 1.0 strict"-Elemente', sowie eine Verlinkung des Artikels 'Reine Formsache: Barrierefreie Formulare mit HTML, CSS & JavaScript'. </p>
       </div>
 
