--- a/suche.html
+++ b/suche.html
@@ -34,7 +34,7 @@
 </form>
 <br />
 <br />
-<a href="http://wave.webaim.org/report#/http://andreasdenninger.cloudcontrolled.com/suche.html"><img src="http://www.w3.org/WAI/wcag2AAA.gif" alt="WAI-AAA"></a>
+<a href="http://wave.webaim.org/report#/http://andreasdenninger.cloudcontrolled.com/suche.html"><img src="http://www.w3.org/WAI/wcag2AAA.gif" alt="WAI-AAA" /></a>
       <!-- Site footer -->
       <div class="footer">
         <p>&copy; Andreas Denninger, 2013 / 2014</p>
@@ -42,8 +42,9 @@
 
     </div> <!-- /container -->
 
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="//code.jquery.com/jquery.js"></script>
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script src="//code.jquery.com/jquery.js" type="text/javascript"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
+	<script src="js/bootstrap.min.js" type="text/javascript"></script>
 </body>
 </html>
