--- a/tabelle.html
+++ b/tabelle.html
@@ -561,8 +561,8 @@
     </div> <!-- /container -->
 	
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="//code.jquery.com/jquery.js"></script>
+	<script src="//code.jquery.com/jquery.js" type="text/javascript"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="js/bootstrap.min.js"></script>
+	<script src="js/bootstrap.min.js" type="text/javascript"></script>
 </body>
 </html>
