--- a/suche.html
+++ b/suche.html
@@ -13,7 +13,8 @@
 <body>
 	<div class="container">
 		<div class="masthead">
-			<h3 class="text-muted">Abschlussarbeit für den MOOC Webengineering I</h3>
+			<h3 class="text-muted">Abschlussarbeit für den MOOC
+				Webengineering I</h3>
 			<ul class="nav nav-justified">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="tabelle.html">Tabelle "XHTML 1.0 strict"</a></li>
@@ -21,28 +22,35 @@
 				<li><a href="impressum.html">Impressum</a></li>
 			</ul>
 		</div>
+		<div class="row col-lg-12">
+			<h1>Hausaufgabe: Barrierefreies Suchformular</h1>
+		</div>
+		<div class="row col-lg-12">
+			<form action="http://de.wikipedia.org/wiki/Spezial:Suche">
+				<fieldset>
+					<legend>Barrierefreies Suchformular</legend>
+					<label for="search">Suche in Wikipedia:</label>&nbsp;&nbsp;<input
+						type="text" name="search" id="search" size="30" value="" />&nbsp;&nbsp;
+					<input type="submit" name="go" value="Artikelsuche" />&nbsp;&nbsp; <input
+						type="submit" name="fulltext" value="Volltextsuche" />
+				</fieldset>
+			</form>
+		</div>
+		<div class="row col-lg-12">
+			<br /> <a
+				href="http://wave.webaim.org/report#/http://andreasdenninger.cloudcontrolled.com/suche.html"><img
+				src="http://www.w3.org/WAI/wcag2AAA.gif" alt="WAI-AAA" /></a>
+		</div>
+		<!-- Site footer -->
 
-<h1>Hausaufgabe: Barrierefreies Suchformular</h1>
-<form action="http://de.wikipedia.org/wiki/Spezial:Suche">
-   <fieldset>
-      <legend>Barrierefreies Suchformular</legend>
-      <label for="search">Suche in Wikipedia:</label><br />
-      <input type="text"   name="search" id="search" value="" />
-      <input type="submit" name="go" value="Artikel"/>
-      <input type="submit" name="fulltext" value="Volltext" />
-   </fieldset>
-</form>
-<br />
-<br />
-<a href="http://wave.webaim.org/report#/http://andreasdenninger.cloudcontrolled.com/suche.html"><img src="http://www.w3.org/WAI/wcag2AAA.gif" alt="WAI-AAA" /></a>
-      <!-- Site footer -->
-      <div class="footer">
-        <p>&copy; Andreas Denninger, 2013 / 2014</p>
-      </div>
+		<div class="footer">
+			<p>&copy; Andreas Denninger, 2013 / 2014</p>
+		</div>
 
-    </div> <!-- /container -->
+	</div>
+	<!-- /container -->
 
-		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="//code.jquery.com/jquery.js" type="text/javascript"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="js/bootstrap.min.js" type="text/javascript"></script>
