--- a/tabelle.html
+++ b/tabelle.html
@@ -21,7 +21,6 @@
 			src="http://www.w3.org/Icons/valid-css2-blue"
 			alt="enter image description here" /></a>
 	</div>
-	<br />
 	<table border="1">
 		<thead>
 			<tr>
@@ -541,5 +540,6 @@
 	<!-- Site footer -->
 	<div class="footer">
 		<p>&copy; Andreas Denninger, 2013 / 2014</p>
+	</div>
 </body>
 </html>
