--- a/tabelle.html
+++ b/tabelle.html
@@ -17,7 +17,7 @@
 			href="http://validator.w3.org/check?uri=http%3A%2F%2Fandreasdenninger.cloudcontrolled.com%2Ftabelle.html"><img
 			src="http://www.w3.org/Icons/valid-xhtml10"
 			alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a> <a
-			href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fandreasdenninger.cloudcontrolled.com%2Ftabelle.html&profile=css21&usermedium=all&warning=1&vextwarning="><img
+			href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fandreasdenninger.cloudcontrolled.com%2Ftabelle.html&amp;profile=css21&usermedium=all&amp;warning=1&amp;vextwarning="><img
 			src="http://www.w3.org/Icons/valid-css2-blue"
 			alt="enter image description here" /></a>
 	</div>
