--- a/tabelle.html
+++ b/tabelle.html
@@ -21,6 +21,7 @@
 			src="http://www.w3.org/Icons/valid-css2-blue"
 			alt="enter image description here" /></a>
 	</div>
+	<p><a class="buttons" href="index.html">zur&uuml;ck</a></p>
 	<table border="1">
 		<thead>
 			<tr>
