--- a/suche.html
+++ b/suche.html
@@ -6,53 +6,36 @@
 <title>Hausaufgabe: Barrierefreies Suchformular</title>
 <link href="css/suche.css" rel="stylesheet" type="text/css"
 	media="screen" />
-<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"
-	media="screen" />
-<link href="css/justified-nav.css" rel="stylesheet" />
 </head>
 <body>
-	<div class="container">
-		<div class="masthead">
-			<h3 class="text-muted">Abschlussarbeit für den MOOC
-				Webengineering I</h3>
-			<ul class="nav nav-justified">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="tabelle.html">Tabelle "XHTML 1.0 strict"</a></li>
-				<li><a href="suche.html">Barrierefreies Suchformular</a></li>
-				<li><a href="impressum.html">Impressum</a></li>
-			</ul>
-		</div>
-		<div class="row col-lg-12">
-			<h1>Hausaufgabe: Barrierefreies Suchformular</h1>
-		</div>
-		<div class="row col-lg-12">
-			<form action="http://de.wikipedia.org/wiki/Spezial:Suche">
-				<fieldset>
-					<legend>Barrierefreies Suchformular</legend>
-					<label for="search">Suche in Wikipedia:</label>&nbsp;&nbsp;<input
-						type="text" name="search" id="search" size="30" value="" />&nbsp;&nbsp;
-					<input type="submit" name="go" value="Artikelsuche" />&nbsp;&nbsp; <input
-						type="submit" name="fulltext" value="Volltextsuche" />
-				</fieldset>
-			</form>
-		</div>
-		<div class="row col-lg-12">
-			<br /> <a
-				href="http://wave.webaim.org/report#/http://andreasdenninger.cloudcontrolled.com/suche.html"><img
-				src="http://www.w3.org/WAI/wcag2AAA.gif" alt="WAI-AAA" /></a>
-		</div>
-		<!-- Site footer -->
+	<h1>Hausaufgabe: Barrierefreies Suchformular</h1>
 
-		<div class="footer">
-			<p>&copy; Andreas Denninger, 2013 / 2014</p>
-		</div>
+	<p>
+		<a class="buttons" href="index.html">zur&uuml;ck</a>
+	</p>
 
+	<form action="http://de.wikipedia.org/wiki/Spezial:Suche">
+		<fieldset>
+			<legend>Barrierefreies Suchformular</legend>
+			<label for="search">Suche in Wikipedia:</label>&nbsp;&nbsp;<input
+				type="text" name="search" id="search" size="30" value="" />&nbsp;&nbsp;
+			<input type="submit" name="go" value="Artikelsuche" />&nbsp;&nbsp; <input
+				type="submit" name="fulltext" value="Volltextsuche" />
+		</fieldset>
+	</form>
+	<a
+		href="http://wave.webaim.org/report#/http://andreasdenninger.cloudcontrolled.com/suche.html"><img
+		src="http://www.w3.org/WAI/wcag2AAA.gif" alt="WAI-AAA" /></a>
+				<a
+			href="http://validator.w3.org/check?uri=http%3A%2F%2Fandreasdenninger.cloudcontrolled.com%2Fsuche.html"><img
+			src="http://www.w3.org/Icons/valid-xhtml10"
+			alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a> <a
+			href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fandreasdenninger.cloudcontrolled.com%2Fsuche.html&amp;profile=css21&amp;usermedium=all&amp;warning=1&amp;vextwarning="><img
+			src="http://www.w3.org/Icons/valid-css2-blue"
+			alt="enter image description here" /></a>
+		
+	<div class="footer">
+		<p>&copy; Andreas Denninger, 2013 / 2014</p>
 	</div>
-	<!-- /container -->
-
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="//code.jquery.com/jquery.js" type="text/javascript"></script>
-	<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="js/bootstrap.min.js" type="text/javascript"></script>
 </body>
 </html>
