--- a/tabelle.html
+++ b/tabelle.html
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="de">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 <link href="css/xhtml.css" rel="stylesheet" type="text/css"
@@ -13,6 +13,9 @@
 	<div class="buttons">
 		<h1>Hausaufgabe: Mit CSS formatierte Tabelle aller "XHTML 1.0
 			strict"-Elemente</h1>
+			<a
+		href="http://wave.webaim.org/report#/http://andreasdenninger.cloudcontrolled.com/tabelle.html"><img
+		src="http://www.w3.org/WAI/wcag2AAA.gif" alt="WAI-AAA" /></a>
 		<a
 			href="http://validator.w3.org/check?uri=http%3A%2F%2Fandreasdenninger.cloudcontrolled.com%2Ftabelle.html"><img
 			src="http://www.w3.org/Icons/valid-xhtml10"
